--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "generate-unique-id": "^2.0.3",
     "http": "^0.0.1-security",
+    "localtunnel": "^2.0.2",
     "mongoose": "^7.3.0",
     "nodemon": "^3.0.1",
     "socket-io": "^1.0.0",
